<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usernameTextView"
        android:layout_alignBottom="@+id/usernameTextView"
        android:layout_marginLeft="48dp"
        android:layout_toRightOf="@+id/usernameTextView"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:textColor="@color/black" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameTextView"
        android:layout_below="@+id/usernameEditText"
        android:layout_marginTop="46dp"
        android:text="@string/label_password"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="37dp"
        android:text="@string/label_username"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordTextView"
        android:layout_alignBottom="@+id/passwordTextView"
        android:layout_alignLeft="@+id/usernameEditText"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/checkBox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTextView"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="20dp"
        android:text="@string/label_remember_me"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_google_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/label_button_login"
        android:textColor="@color/black"
        android:background="@color/gray" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/torchbanner" />

</RelativeLayout>